fix overflow and add some text

--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+html, body {
+    overflow: hidden;
+}
+
+html {
+    width: 100vw;
+    height: 100vh;
+}
+
 body {
     background-color: #FC6A21;
     position: relative;
@@ -7,7 +16,6 @@ body {
     display: flex;
     justify-content: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    /* font-size: 1.15em; */
 }
 
 .menu {
@@ -39,30 +47,51 @@ body {
     bottom: 0;
     background: rgba(0, 0, 0, 0.7);
     content: '';
+    width: 100vw;
+    height: 100vh;
 }
 
-.menu-content>.text {
+.menu-content > .text {
     position: absolute;
     margin-top: 8em;
-    color: #fff;
-    text-align: center;
-}
-
-.menu-content>.text>#title-menu {
+    color: #f8fafc;
+    width: 100vw;
+    margin-left: auto;
     display: flex;
+    justify-content: center;
 }
 
-.menu-content>.text>#title-menu>h2 {
+.menu-content > .text > #title-menu {
+    display: flex;
+    margin-top: -2rem;
+    justify-content: center;
+}
+
+.menu-content > .text > #title-menu > h2 {
     font-size: 2em;
 }
 
-.menu-content>.text>.gameover_msg {
-    margin-top: -2.6em;
+.menu-content > .text > .gameover_msg {
+    margin-top: 2em;
     font-size: .89em;
+    position: absolute;
+    text-align: center;
+}
+
+.menu-content > .text > .gameover_msg > h2 {
+    margin-top: 1rem;
+    diplay: flex;
+    justify-content: center;
+}
+
+.menu-content > .text > .gameover_msg > .tutorial > h5 {
+    diplay: flex;
+    justify-content: center;
+    text-align: center;
 }
 
 .button-container {
-    margin-top: 17rem;
+    margin-top: 20.2rem;
 }
 
 .menu-button {
@@ -71,7 +100,7 @@ body {
     border-radius: 20px;
     width: 15rem;
     height: 3rem;
-    color: #fff;
+    color: #f8fafc;
     font-weight: 600;
     letter-spacing: .125em;
     font-size: 1.2rem;
@@ -87,8 +116,8 @@ body {
 .highscore {
     position: absolute;
     z-index: 6;
-    color: #fff;
-    margin-top: 20rem
+    color: #f8fafc;
+    margin-top: 23.4rem
 }
 
 .highscore > .starting {
@@ -118,6 +147,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 2em;
 }
 
 #times {
@@ -129,12 +159,12 @@ body {
     text-align: center;
     margin-top: -.8em;
     font-size: 2em;
-    color: #000;
+    color: #0f172a;
 }
 
 .direction {
     position: absolute;
-    background-color: #fff;
+    background-color: #f8fafc;
     padding-top: -5vw;
     padding-bottom: -5vw;
     padding-left: 3vh;
